docs/admission-controller/version-1.38/modules/en/pages/howtos/policy-servers/02-private-registry.adoc
include::partial$variables.adoc[]

= Configuring PolicyServers to use private registries
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2026-05-14
:page-revdate: {revdate}
:description: Configure PolicyServers to use private registries by creating a Docker configuration secret and configuring the spec.imagePullSecret field in the configuration.
:doc-persona: ["kubewarden-operator", "kubewarden-integrator"]
:doc-topic: ["operator-manual", "policy-servers", "private-registry"]
:doc-type: ["howto"]
:keywords: ["{admc-name}", "kubewarden", "kubernetes", "policyservers", "private registries"]
:current-version: {page-origin-branch}

It's possible to configure PolicyServers to use credentials of private OCI
registries. This permits those PolicyServers to download policies from public
and private registries.

Once you configure PolicyServer to access private registries, policies running
on it can also access those registries. This works when policies use the
provided SDKs or host capability APIs. This is because PolicyServers expose
that functionality through the defined policy SDKs and the lower level host
capability API. This is the case, for example, in policies that verify
signatures of container images.

To achieve this, you should create a Secret containing the private registry
credentials. Then configure your PolicyServers' resources, and then your Helm
chart to use it.

[#_creating_the_secret]
== Creating the Secret

PolicyServers support the usual
https://kubernetes.io/docs/concepts/configuration/secret/#docker-config-secrets[Docker
configuration Secrets] , either of type `kubernetes.io/dockercfg` or type
`kubernetes.io/dockerconfigjson`. You can create these secrets with `kubectl
create secret docker-registry`.

You create the secret **in the namespace where you run your PolicyServer**.
This follows the principle of least privilege, and lets different
PolicyServers validate OCI artifacts, from different registries, independently.

You create this Secret for the PolicyServer with the following command:

[subs="+attributes",shell]
----
kubectl --namespace kubewarden create secret docker-registry secret-ghcr-docker \
  --docker-username=myuser \
  --docker-password=mypass123 \
  --docker-server=myregistry.io
----

[TIP]
====

Label the Secret as specified in
xref:/howtos/rancher-backup-operator.adoc#_user_secrets[User secrets] for it to
be part of backups done by Rancher Backup Operator

====

For more information on how to create the Docker Secrets, see the
https://kubernetes.io/docs/concepts/configuration/secret/#docker-config-secrets[Kubernetes
documentation].

== Consuming the Secret in PolicyServers

Once you have the Secret created, it's necessary to configure the PolicyServer
instance. Set the `spec.imagePullSecret` field with the name of the Secret that
contains the credentials:

[subs="+attributes",yaml]
----
# Example of a PolicyServer using a private registry
apiVersion: policies.kubewarden.io/v1
kind: PolicyServer
metadata:
  name: default
spec:
  image: ghcr.io/kubewarden/policy-server:v1.1.1
  serviceAccountName: policy-server
  replicas: 1
  annotations:
  imagePullSecret: "secret-ghcr-docker"
----

== Consuming the Secret in the Helm chart

For the PolicyServer `default`, which is managed by the `admission-controller`
Helm chart, you can set the `policyServer.imagePullSecret` value to the Secret
name. Then, the created default policy server is able to download policies from
your private registry as well:

[subs="+attributes",yaml]
----
# values file example
policyServer:
  telemetry:
    enabled: False
  imagePullSecret: secret-ghcr-docker
----
